--- a/navbar.html
+++ b/navbar.html
@@ -6,7 +6,7 @@
 <meta name="google" content="nositelinkssearchbox">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>dispatch page</title>
-<link rel="icon" href="/renew/assets/favicon-xeWRx1_M.ico">
+<link rel="icon" href="/bill/assets/favicon-xeWRx1_M.ico">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 
@@ -438,132 +438,35 @@ ul3 button:before{
 }
 
 </style>
-  <script type="module" crossorigin src="/renew/assets/navbar-PUTfvaaL.js"></script>
-  <link rel="modulepreload" crossorigin href="/renew/assets/modulepreload-polyfill-B5Qt9EMX.js">
-  <link rel="modulepreload" crossorigin href="/renew/assets/@babel-D5GiwVxl.js">
-  <link rel="modulepreload" crossorigin href="/renew/assets/react-BdZFSBsr.js">
-  <link rel="modulepreload" crossorigin href="/renew/assets/idb-BXWtuYvb.js">
-  <link rel="modulepreload" crossorigin href="/renew/assets/tslib-Bl3NwWCd.js">
-  <link rel="modulepreload" crossorigin href="/renew/assets/@firebase-CDL1tB0y.js">
-  <link rel="modulepreload" crossorigin href="/renew/assets/firebase-B0CX24e-.js">
-  <link rel="modulepreload" crossorigin href="/renew/assets/scheduler-BNqrtbQi.js">
-  <link rel="modulepreload" crossorigin href="/renew/assets/react-dom-D4EJkNTg.js">
-  <link rel="modulepreload" crossorigin href="/renew/assets/@emotion-sScrWPmR.js">
-  <link rel="modulepreload" crossorigin href="/renew/assets/stylis-DinRj2j6.js">
-  <link rel="modulepreload" crossorigin href="/renew/assets/styled-components-B6ns2VA2.js">
-  <link rel="modulepreload" crossorigin href="/renew/assets/react-data-table-component-CFZviFFd.js">
-  <link rel="modulepreload" crossorigin href="/renew/assets/lodash-CbiWtPZ3.js">
-  <link rel="modulepreload" crossorigin href="/renew/assets/prop-types-CvXJVnZB.js">
-  <link rel="modulepreload" crossorigin href="/renew/assets/classnames-Dq6UHPZf.js">
-  <link rel="modulepreload" crossorigin href="/renew/assets/@juggle-C8OzoCMD.js">
-  <link rel="modulepreload" crossorigin href="/renew/assets/@rsuite-CWz-jV_Y.js">
-  <link rel="modulepreload" crossorigin href="/renew/assets/dom-lib-BkUHInzI.js">
-  <link rel="modulepreload" crossorigin href="/renew/assets/date-fns-jpXNl_-y.js">
-  <link rel="modulepreload" crossorigin href="/renew/assets/memoize-one-CcMeOnPo.js">
-  <link rel="modulepreload" crossorigin href="/renew/assets/react-window-W2jQ0Fyy.js">
-  <link rel="modulepreload" crossorigin href="/renew/assets/rsuite-BaD6UYfK.js">
-  <link rel="stylesheet" crossorigin href="/renew/assets/rsuite-CgCYLuRn.css">
+  <script type="module" crossorigin src="/bill/assets/navbar-Dco9pxJ2.js"></script>
+  <link rel="modulepreload" crossorigin href="/bill/assets/modulepreload-polyfill-B5Qt9EMX.js">
+  <link rel="modulepreload" crossorigin href="/bill/assets/@babel-O290PTR9.js">
+  <link rel="modulepreload" crossorigin href="/bill/assets/react-B8OkMeKR.js">
+  <link rel="modulepreload" crossorigin href="/bill/assets/idb-BXWtuYvb.js">
+  <link rel="modulepreload" crossorigin href="/bill/assets/tslib-Bl3NwWCd.js">
+  <link rel="modulepreload" crossorigin href="/bill/assets/@firebase-C5Cq7PJ6.js">
+  <link rel="modulepreload" crossorigin href="/bill/assets/firebase-XGZ_nGum.js">
+  <link rel="modulepreload" crossorigin href="/bill/assets/scheduler-BNqrtbQi.js">
+  <link rel="modulepreload" crossorigin href="/bill/assets/react-dom-CK6VSn9z.js">
+  <link rel="modulepreload" crossorigin href="/bill/assets/@emotion-sScrWPmR.js">
+  <link rel="modulepreload" crossorigin href="/bill/assets/stylis-DinRj2j6.js">
+  <link rel="modulepreload" crossorigin href="/bill/assets/styled-components-C7g8Eld_.js">
+  <link rel="modulepreload" crossorigin href="/bill/assets/react-data-table-component-n3rQaMBX.js">
+  <link rel="modulepreload" crossorigin href="/bill/assets/lodash-CtRbWyRy.js">
+  <link rel="modulepreload" crossorigin href="/bill/assets/prop-types-B2QOICdJ.js">
+  <link rel="modulepreload" crossorigin href="/bill/assets/classnames-BU6Twoh0.js">
+  <link rel="modulepreload" crossorigin href="/bill/assets/@rsuite-TqWiUVvd.js">
+  <link rel="modulepreload" crossorigin href="/bill/assets/dom-lib-q__jS-x6.js">
+  <link rel="modulepreload" crossorigin href="/bill/assets/date-fns-DH0mBdvt.js">
+  <link rel="modulepreload" crossorigin href="/bill/assets/@juggle-C8OzoCMD.js">
+  <link rel="modulepreload" crossorigin href="/bill/assets/memoize-one-CcMeOnPo.js">
+  <link rel="modulepreload" crossorigin href="/bill/assets/react-window-DH1-9fn9.js">
+  <link rel="modulepreload" crossorigin href="/bill/assets/rsuite-BYzyu3uq.js">
+  <link rel="stylesheet" crossorigin href="/bill/assets/rsuite-CgCYLuRn.css">
 </head>
 <body>
 <nav>
-  <div id="itemEdit" class="editClass">
   
-    <!-- <p style="font-size:25px "  ></p> -->
-    <div type="text" id="itemEdit1" class="item">
-      <!-- 1 -->
-      <label for="barcode" style="color:blue;">Barcode:</label>
-      <input type="text" id="barcode" value="Mickey2" style="background-color:rgb(10, 226, 86);"><br><br>
-      <label for="jobID" style="color:blue;">JobID:</label>
-      <input type="text" id="jobID" value="Mickey2" style="background-color:rgb(226, 222, 10);"><br><br>
-      <label for="modeID" style="color:blue;">ModeID:</label>
-      <select type="text" id="modeID" style="background-color:rgb(226, 222, 10);">
-        <option value="DropOff">DropOff</option>
-        <option value="PickUp">PickUp</option>
-        <option value="DeskTop">DeskTop</option>
-      </select> <br><br>
-      <!-- <input type="text" id="modeID" value="Mickey2" style="background-color:rgb(226, 222, 10);"><br><br> -->
-      <label for="carrierRef" style="color:blue;">CarrierRef:</label>
-      <input type="text" id="carrierRef" value="Mickey2" style="background-color:rgb(226, 222, 10);"><br><br>
-      <label for="scheduledDate" style="color:blue;">ScheduledDate:</label>
-      <input type="text" id="scheduledDate" value="Mickey2" style="background-color:rgb(226, 222, 10);"><br><br>
-      <label for="btacc" style="color:blue;">BTACC:</label>
-      <!-- <select id="btacc" style="background-color:rgb(226, 222, 10);">		 
-      </select> <br><br> -->
-      <input type="text" id="btacc" value="Mickey2" style="background-color:rgb(226, 222, 10);"><br><br>
-
-      <label for="serviceType" style="color:blue;">ServiceType:</label>
-      <select type="text" id="serviceType" style="background-color:rgb(226, 222, 10);">
-        <option type="text" value="normal" style="background-color:rgb(226, 222, 10);">Normal</option>
-        <option type="text" value="high" style="background-color:rgb(226, 222, 10);">HighService</option>
-      </select> <br><br>
-      <!-- <input type="text" id="serviceType" value="Mickey2" style="background-color:rgb(226, 222, 10);"><br><br> -->
-
-      <label for="weight" style="color:blue;">Weight:</label>
-      <input type="text" id="weight" value="Mickey2" style="background-color:rgb(226, 222, 10);"><br><br>
-      <label for="unit" style="color:blue;">Unit:</label>
-      <select type="text" id="unit" style="background-color:rgb(226, 222, 10);">
-        <option type="text" value="kg" style="background-color:rgb(226, 222, 10);">kg</option>
-        <option type="text" value="lb" style="background-color:rgb(226, 222, 10);">lb</option>
-      </select> <br><br>
-      <label for="route" style="color:blue;">Route:</label>
-      <input type="text" id="route" value="Mickey2" style="background-color:rgb(226, 222, 10);"><br><br>
-      
-    </div>
-    <div type="text" id="itemEdit2" class="item"> <!-- 2 -->
-      <label for="company" style="color:blue;">Compay:</label>
-      <input type="text" id="company" value="Mickey2" style="background-color:rgb(10, 226, 212);"><br><br>
-      <label for="address1" style="color:blue;">Address1:</label>
-      <input type="text" id="address1" value="Mickey2" style="background-color:rgb(226, 222, 10);"><br><br>
-      <label for="address2" style="color:blue;">Address2:</label>
-      <input type="text" id="address2" value="Mickey2" style="background-color:rgb(226, 222, 10);"><br><br>
-      <label for="address3" style="color:blue;">Address3:</label>
-      <input type="text" id="address3" value="Mickey2" style="background-color:rgb(226, 222, 10);"><br><br>
-      <label for="receiver" style="color:blue;">Receiver:</label>
-      <input type="text" id="receiver" value="Mickey2" style="background-color:rgb(226, 222, 10);"><br><br>
-      <label for="city" style="color:blue;">City:</label>
-      <input type="text" id="city" value="Mickey2" style="background-color:rgb(226, 222, 10);"><br><br>
-      <label for="provState" style="color:blue;">ProvState:</label>
-      <input type="text" id="provState" value="Mickey2" style="background-color:rgb(226, 222, 10);"><br><br>
-      <label for="postalCode" style="color:blue;">PostalCode:</label>
-      <input type="text" id="postalCode" value="Mickey2" style="background-color:rgb(226, 222, 10);"><br><br>
-      <label for="phone" style="color:blue;">Phone:</label>
-      <input type="text" id="phone" value="Mickey2" style="background-color:rgb(226, 222, 10);"><br><br>
-      <label for="email" style="color:blue;">Email:</label>
-      <input type="text" id="email" value="Mickey2" style="background-color:rgb(226, 222, 10);"><br><br>
-    </div>
-    <div type="text" id="itemEdit3" class="item"> <!-- 3 -->
-      <label for="size" style="color:blue;">Size:</label>
-      <select type="text" id="size" style="background-color:rgb(226, 222, 10);">        
-        <option value="Parcel">Parcel</option>
-        <option value="Skid">Skid</option>
-      </select> <br><br>
-      <!-- <input type="text" id="size" value="Mickey2" style="background-color:rgb(226, 222, 10);"><br><br> -->
-      <label for="howmany" style="color:blue;">HowMany:</label>
-      <select type="text" id="howmany" value="1" style="background-color:rgb(226, 222, 10);">        
-        <option value="1">1</option>
-        <option value="2">2</option> 
-        <option value="3">3</option>
-        <option value="4">4</option>
-        <option value="5">5</option>
-        <option value="6">6</option>
-        <option value="7">7</option>
-        <option value="8">8</option>
-      </select> <br><br>
-      <!-- <input type="text" id="howmany" value="Mickey2" style="background-color:rgb(226, 222, 10);"><br><br> -->
-      
-      <label for="starttime" style="color:blue;">StartTime:</label>
-      <input type="text" id="starttime" value="6:00" style="background-color:rgb(226, 222, 10);"><br><br>
-      <label for="endtime" style="color:blue;">EndTime:</label>
-      <input type="text" id="endtime" value="6:00" style="background-color:rgb(226, 222, 10);"><br><br>
-      <label for="extrafee" style="color:blue;">ExtraFee:</label>
-      <input type="text" id="extrafee" value="0.00" style="background-color:rgb(226, 222, 10);"><br><br>
-    </div>
-    <div id="bottombutton" class="bottom" >
-      <span id="x-button" onclick="closeRowEdit()">[X]</span><br><br>    
-      <button id="save-button">Save</button><br><br>
-      <button id="cancel-button" onclick="closeRowEdit()">Cancel</button><br><br>
-    </div>
-  </div>
 
     <ul1>
       <input type="checkbox" id="switch" onclick="openSide()"/>
@@ -587,7 +490,7 @@ ul3 button:before{
 
 
 
-<div id="win" class="cwin"></div>
+<!-- <div id="win" class="cwin"></div> -->
 
 
 
